* 0.11.0 (unreleased)
   * Gameplay Changes
      * Universe significantly overworked to me more consistent with lore
      * Planet properties affect quantity of missions available
      * Moved many missions to the vn system
      * diy-nerds: improved reward
   * Quality of Life
      * Make it explicit when all the escorts have jumped or landed
   * New Content
      * 4 new missions
      * More points of interest
      * Many, many new systems and spobs
   * Engine
      * Map system viewer is more compact
      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
   * Fixes
      * Fixed many corner case crashes in the editor

* 0.10.4 (unreleased)
   * Fixed crashes related to multiple effects being active at once
   * Fixed multiple mission_done hooks not passing parameter correctly
   * Fixed plugin strings not being initialized with mismatched saves
   * ec06: made the final battle work much better

* 0.10.3
   * Fixed crash when using fits currently selected ship outfit filter
   * Fixed escorts always being set to aggressive when loading a save
   * Fixed Dvaered standing cap increase being lost after loading game
   * Made space dust a bit less bright when it starts turning into lines
   * derelict_rescue: play money sound instead of victory sound on completion
   * rehab: fixed crash when aborting rehabilitation missions
   * foundation station, efferey: fixed not using pirate landing script

* 0.10.2
   * Fixed escorts sometimes not following their leader and landing
   * Fixed autonav always wanting to go to the edge of jump points
   * Fixed crash when causing multiple dialogues to run in the background
   * Fixed outfit lua being called before initialization
   * Fixed not giving the AI a name when updating a save breaking the updater script
   * Fixed deleting last snapshot of a save switching to another pilot's saves
   * Fixed saves and snapshots not displaying correct name with version mismatch