@@ -21,12 +21,9 @@
    - Add lots of lore rewards, not sure if best to store in ship log or somewhere else
 
 --]]
-local fmt = require "format"
 --local luaspfx = require "luaspfx"
 --local tut = require "common.tutorial"
-local der = require 'common.derelict'
 local poi = require "common.poi"
-local vn = require "vn"
 local lf = require "love.filesystem"
 
 
@@ -91,81 +88,10 @@ function found ()
 end
 
 function board( p )
-   local failed = false
-
-   vn.clear()
-   vn.scene()
-   vn.sfx( der.sfx.board )
-   vn.music( der.sfx.ambient )
-   vn.transition()
-
-   -- Have to resolve lock or bad thing happens (tm)
-   if mem.locked then
-      local stringguess = require "minigames.stringguess"
-      vn.na(_([[You board the ship and enter the airlock. When you attempt to enter, an authorization prompt opens up. Looking at the make of the ship, it seems heavily reinforced. It looks like you're going to have to break the code to gain complete access to the ship.]]))
-      stringguess.vn()
-      vn.func( function ()
-         if stringguess.completed() then
-            vn.jump("unlocked")
-            return
-         end
-         vn.jump("unlock_failed")
-      end )
-
-      vn.label("unlocked")
-      vn.na(_([[You deftly crack the code and the screen flashes with '#gAUTHORIZATION GRANTED#0'. Time to see what goodness awaits you!]]))
-      vn.jump("reward")
-
-      vn.label("unlock_failed")
-      vn.na(_([[A brief '#rAUTHORIZATION DENIED#0' flashes on the screen and you hear the ship internals groan as the emergency security protocol kicks in and everything gets locked down. It looks like you won't be getting anywhere here; the ship is as good as debris. You have no option but to return dejectedly to your ship. Maybe next time.]]))
-      vn.func( function () failed = true end )
-      vn.done()
-   else
-      vn.na(_([[You board the derelict which seems oddly in pretty good condition. Furthermore, it seems like there is no access lock in place. What a lucky find!]]))
-   end
-
-   vn.label("reward")
-   if mem.reward.type == "function" then
-      local rwd = require( mem.reward.requirename )( mem )
-      if rwd then
-         rwd.func()
-      else -- Failed to get a reward, just default to data
-         mem.reward.type = "data"
-      end
-   end
-   if mem.reward.type == "credits" then
-      local msg = _([[You access the main computer and are able to login to find a hefty amount of credits. This will come in handy.]])
-      msg = msg .. "\n\n" .. fmt.reward(mem.reward.value)
-      vn.na( msg )
-      vn.func( function ()
-         player.pay( mem.reward.value )
-         poi.log(fmt.f(_([[You found a pristine derelict with large amounts of credits in the {sys} system..]]),
-            {sys=mem.sys}))
-      end )
-   elseif mem.reward.type == "data" then
-      local msg = _([[You access the main computer and are able to extract some Encrypted Data Matrices. It does not seem like you can de-encrypt them without damaging them, but they may have some other use.]])
-      msg = msg .. "\n\n" .. fmt.reward(_("Encrypted Data Matrix"))
-      vn.na( msg )
-      vn.func( function ()
-         poi.data_give( 1 )
-         poi.log(fmt.f(_([[You found a pristine derelict with an Encrypted Data Matrix in the {sys} system..]]),
-            {sys=mem.sys}))
-      end )
-   elseif mem.reward.type == "outfit" then
-      local msg = mem.reward.msg or _([[Exploring the cargo bay, you find something that might be of use to you.]])
-      msg = msg .. "\n\n" .. fmt.reward(mem.reward.value)
-      vn.na( msg )
-      vn.func( function ()
-         player.outfitAdd( mem.reward.value )
-      end )
-   end
-   vn.sfxVictory()
-   vn.na(_([[You explore the rest of the ship but do not find anything else of interest. Although the ship is in very good condition, it is still not space-worthy, and there is not anything that you can do with it. You let it rest among the stars.]]))
-   vn.sfx( der.sfx.unboard )
-   vn.run()
+   local failed = poi.board()
 
    -- Clean up stuff
-   poi.misnDone( failed )
+   poi.cleanup( failed )
    p:setHilight(false)
    player.unboard()
    misn.finish( not failed )
