@@ -3,6 +3,7 @@
       * Universe significantly overworked to me more consistent with lore
       * Planet properties affect quantity of missions available
       * Moved many missions to the vn system
+      * Can sometimes find POI events with a pulse scanner equipped when entering systems
       * diy-nerds: improved reward
    * Quality of Life
       * Make it explicit when all the escorts have jumped or landed
